tests/functional/lang/eval-fail-sort-2.err.exp
error:
       … while calling the 'sort' builtin
         at /pwd/lang/eval-fail-sort-2.nix:1:1:
            1| builtins.sort 1 [ "foo" ]
             | ^
            2|

       … while evaluating the first argument passed to builtins.sort

       error: expected a function but found an integer: 1
